fix wrapping

--- a/src/sciop/static/css/layout.css
+++ b/src/sciop/static/css/layout.css
@@ -165,8 +165,8 @@ table {
   }
 
   .collapsible-summary span {
-    word-wrap: break-word;
-    word-break: break-all;
+    overflow-wrap: anywhere;
+    word-break: break-word;
   }
 }
 
@@ -178,7 +178,7 @@ table {
     max-height: 50vh;
     overflow-y: scroll;
     display: block;
-    word-break: break-all;
+    word-break: break-word;
   }
 }
 
@@ -294,9 +294,11 @@ table {
   flex-direction: row;
   gap: 0.5em;
   margin-bottom: 0.5em;
+  flex-wrap: wrap;
 
   .token-button-container {
-    /*border: 1px solid var(--color-primary-shade-3);*/
+    display: flex;
+    flex-wrap: nowrap;
     border-radius: 3px;
   }
   .token {
